--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,16 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".AddAlarmPattern"
+            android:exported="true"></activity>
+        <activity
+            android:name=".SetAlarmPattern"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
